--- a/mcu/hands_on_mcu/hands_on_mcu.ioc
+++ b/mcu/hands_on_mcu/hands_on_mcu.ioc
@@ -1,4 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -22,27 +29,31 @@ LPUART1.TxPinLevelInvertParam=UART_ADVFEATURE_TXINV_DISABLE
 LPUART1.WordLength=UART_WORDLENGTH_8B
 Mcu.CPN=STM32L4A6ZGT6
 Mcu.Family=STM32L4
-Mcu.IP0=LPUART1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IPNb=4
+Mcu.IP0=ADC1
+Mcu.IP1=LPUART1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM4
+Mcu.IPNb=6
 Mcu.Name=STM32L4A6ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PB3 (JTDO/TRACESWO)
-Mcu.Pin11=PB7
-Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin10=PA14 (JTCK/SWCLK)
+Mcu.Pin11=PB3 (JTDO/TRACESWO)
+Mcu.Pin12=PB7
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
 Mcu.Pin3=PH1-OSC_OUT (PH1)
-Mcu.Pin4=PB14
-Mcu.Pin5=PG7
-Mcu.Pin6=PG8
-Mcu.Pin7=PC7
-Mcu.Pin8=PA13 (JTMS/SWDIO)
-Mcu.Pin9=PA14 (JTCK/SWCLK)
-Mcu.PinsNb=13
+Mcu.Pin4=PA0
+Mcu.Pin5=PB14
+Mcu.Pin6=PG7
+Mcu.Pin7=PG8
+Mcu.Pin8=PC7
+Mcu.Pin9=PA13 (JTMS/SWDIO)
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L4A6ZGTx
@@ -50,6 +61,7 @@ MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -59,6 +71,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA0.Signal=ADCx_IN5
 PA13\ (JTMS/SWDIO).GPIOParameters=GPIO_Label
 PA13\ (JTMS/SWDIO).GPIO_Label=TMS
 PA13\ (JTMS/SWDIO).Locked=true
@@ -78,14 +91,12 @@ PB3\ (JTDO/TRACESWO).GPIO_Label=SWO
 PB3\ (JTDO/TRACESWO).Locked=true
 PB3\ (JTDO/TRACESWO).Mode=Trace_Asynchronous_SW
 PB3\ (JTDO/TRACESWO).Signal=SYS_JTDO-SWO
-PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
-PB7.Signal=GPIO_Output
+PB7.Signal=S_TIM4_CH2
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=B1
 PC13.Locked=true
-PC13.Signal=GPIO_Input
+PC13.Signal=GPXTI13
 PC14-OSC32_IN\ (PC14).Locked=true
 PC14-OSC32_IN\ (PC14).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
@@ -139,8 +150,9 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true
-RCC.ADCFreq_Value=384000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true
+RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_SYSCLK
+RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
 RCC.APB1TimFreq_Value=32000000
@@ -159,7 +171,7 @@ RCC.I2C1Freq_Value=32000000
 RCC.I2C2Freq_Value=32000000
 RCC.I2C3Freq_Value=32000000
 RCC.I2C4Freq_Value=32000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FLatency,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSIClockRange,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FLatency,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSIClockRange,MSI_VALUE,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
 RCC.LPTIM1Freq_Value=32000000
 RCC.LPTIM2Freq_Value=32000000
 RCC.LPUART1Freq_Value=32000000
@@ -168,11 +180,10 @@ RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=32000000
 RCC.MSIClockRange=RCC_MSIRANGE_10
 RCC.MSI_VALUE=32000000
-RCC.PLLN=71
-RCC.PLLPoutputFreq_Value=1136000000
-RCC.PLLQoutputFreq_Value=1136000000
+RCC.PLLPoutputFreq_Value=128000000
+RCC.PLLQoutputFreq_Value=128000000
 RCC.PLLR=RCC_PLLR_DIV6
-RCC.PLLRCLKFreq_Value=378666666.6666667
+RCC.PLLRCLKFreq_Value=42666666.666666664
 RCC.PLLSAI1N=24
 RCC.PLLSAI1PoutputFreq_Value=384000000
 RCC.PLLSAI1QoutputFreq_Value=384000000
@@ -193,11 +204,24 @@ RCC.USART2Freq_Value=32000000
 RCC.USART3Freq_Value=32000000
 RCC.USBFreq_Value=384000000
 RCC.VCOInputFreq_Value=32000000
-RCC.VCOOutputFreq_Value=2272000000
+RCC.VCOOutputFreq_Value=256000000
 RCC.VCOSAI1OutputFreq_Value=768000000
 RCC.VCOSAI2OutputFreq_Value=256000000
+SH.ADCx_IN5.0=ADC1_IN5,IN5-Single-Ended
+SH.ADCx_IN5.ConfNb=1
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
+SH.S_TIM4_CH2.0=TIM4_CH2,Output Compare2 CH2
+SH.S_TIM4_CH2.ConfNb=1
+TIM4.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
+TIM4.IPParameters=Channel-Output Compare2 CH2,Prescaler,Period,OCMode_2
+TIM4.OCMode_2=TIM_OCMODE_TOGGLE
+TIM4.Period=499
+TIM4.Prescaler=31199
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=NUCLEO-L4A6ZG
 boardIOC=true
 isbadioc=false
